# DjangoTemplateCookieCutter

./: .env.example  docker-compose.local.yml  docker-compose.production.yml  pyproject.toml
compose/local/django/: Dockerfile
compose/local/django/celery/flower/: start
compose/production/django/: Dockerfile  start
config/: asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
requirements/: base.txt  local.txt
