[project]
name = "django-template-cookiecutter"
version = "0.1.0"
description = "A Django project managed by uv"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "django>=6.0.3",
    "django-cleanup>=9.0.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-filter>=25.2",
    "django-redis>=6.0.0",
    "djangorestframework>=3.17.0",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=25.1.0",
    "pillow>=12.1.1",
    "psycopg[binary,pool]>=3.3.3",
    "redis>=7.3.0",
    "requests>=2.32.5",
    "whitenoise>=6.12.0",
]

[tool.uv]
managed = true
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "django-silk>=5.5.0",
    "ipdb>=0.13.13",
    "pre-commit>=4.5.1",
    "watchfiles>=1.1.1",
    "werkzeug[watchdog]>=3.1.6",
]

# ==== isort ====
[tool.isort]
profile = "black"
line_length = 119
known_first_party = "DjangoTemplate"
known_django = "django"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
combine_as_imports = true
lines_after_imports = 2
skip = ["migrations", "__pycache__", ".git", ".tox", ".venv", "env"]
src_paths = ["apps", "src"]
order_by_type = true

# ==== black ====
[tool.black]
line-length = 119
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | __pycache__
  | build
  | dist
  | migrations
  | env
  | venv
  | .venv
)/
'''
skip-string-normalization = false

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ds=config.settings.test --reuse-db --import-mode=importlib"
python_files = [
    "tests.py",
    "test_*.py",
]

# ==== Coverage ====
[tool.coverage.run]
include = ["django_template_cookie_cutter/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = ["django_coverage_plugin"]

# ==== mypy ====
[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF",
]
ignore = [
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "UP038", # Checks for uses of isinstance/issubclass that take a tuple
  "SLF001", # Ignores Private member accessed: `_meta`
  "ERA001", # Ignores commented code
  "DJ008",
  "EM101",
  "B904",
  "BLE001",
  "RUF001",
  "EM102",
  "TRY003",# Ignores  abcense of __str__ method on models
          # of types for comparison.
          # Deactivated because it can make the code slow:
          # https://github.com/astral-sh/ruff/issues/7871
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
    "UP038",
]


[tool.ruff.lint.isort]
force-single-line = true
